--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,3 +1,6 @@
+# Simple workflow for deploying static content to GitHub Pages
+# Source: Vite > Deploying a Static Site > GitHub Pages:  https://vite.dev/guide/static-deploy.html#github-pages
+
 name: Deploy static content to Pages
 
 on:
